footer on mobile fixed

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -230,6 +230,9 @@ footer img {
   footer {
     justify-content: center;
   }
+  footer img {
+    margin: 4rem auto;
+  }
 
   footer span {
     display: none;
